--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;300;400&display=swap" rel="stylesheet">
+  
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -58,7 +59,7 @@ experience, and overall efficiency.</p>
 
     <!--single number-->
     <div class="number">
-      <h1>12m+</h1>
+      <h1>12M+</h1>
       <p>queries</p>
     </div>
     <!--end of single number-->
@@ -71,9 +72,6 @@ experience, and overall efficiency.</p>
   <!--end of banner-->
 </header>
   <!--end of backgound-->
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
 </body>
 </html>
